Fix step test alignment

--- a/assets/styles/_css.less
+++ b/assets/styles/_css.less
@@ -544,6 +544,7 @@ footer {
     > div {
         float: none;
         display: inline-block;
+        vertical-align: top;
     }
 }
 
